fix page navigation spacing in mobile

--- a/components/page/pagenavigation/pagenavigation.module.css
+++ b/components/page/pagenavigation/pagenavigation.module.css
@@ -1,6 +1,7 @@
 .container {
-  @apply flex flex-row space-x-2.0 justify-center;
+  @apply flex flex-row space-x-1.0 lg:space-x-2.0 justify-center;
   @apply w-full py-1.0;
+  @apply text-caption;
 }
 
 .currentPage {
